--- a/locales/en.default.json
+++ b/locales/en.default.json
@@ -281,7 +281,6 @@
       "announcement": "Announcement",
       "announcement_bar": "Announcement bar"
     },
-
     "header": {
       "announcement": "Announcement",
       "menu": "Menu",
@@ -343,7 +342,8 @@
       "use_fewer_filters_html": "Use fewer filters or <a class=\"{{ class }}\" href=\"{{ link }}\">remove all</a>"
     },
     "video": {
-      "load_video": "Load video: {{ description }}"
+      "load_video": "Load video: {{ description }}",
+      "watch": "Watch"
     },
     "slideshow": {
       "load_slide": "Load slide",
