Image with text section - add option for an original image aspect ratio

--- a/locales/en.default.schema.json
+++ b/locales/en.default.schema.json
@@ -1351,6 +1351,9 @@
           "options__4": {
             "label": "Large"
           },
+          "original": {
+            "label": "Original aspect ratio"
+          },
           "label": "Height"
         },
         "desktop_image_width": {
