Added 'variant_subtitle' block to the 'main-product' section

--- a/locales/en.default.schema.json
+++ b/locales/en.default.schema.json
@@ -1980,6 +1980,15 @@
             }
           }
         },
+        "variant_subtitle": {
+          "name": "Variant subtitle",
+          "settings": {
+            "paragraph": {
+              "content": "When this block is added, it shows value of Variant metafield called 'Variant subtitle'."
+            }
+            
+          }
+        },
         "title": {
           "name": "Title"
         },
